2006-08-09  Benoît Dejean  <benoit@placenet.org>

	* src/netspeed.c: (netspeed_applet_factory):

	Added missing call to glibtop_init.

2006-08-06  Benoît Dejean  <benoit@placenet.org>

	* src/netspeed.c: (update_applet), (netspeed_enter_cb),
	(netspeed_leave_cb), (netspeed_applet_factory):
	* src/netspeed.h:
	
	Big speedup ! Updates the tooltip only when needed :)

2006-08-06  Benoît Dejean  <benoit@placenet.org>

	* src/netspeed.c: (update_applet):
	* src/netspeed.h:
	
	Reworked applet->(in|out)_old usage. No longer rotates data
	on each updated but instead moves applet->index_old (just like for
	graph data). This is a little speedup.

2006-08-06  Benoît Dejean  <benoit@placenet.org>

	* configure.in:
	* src/backend.c: (get_ptp_info), (get_device_info):
	
	Big rework. Requires libgtop 2.14.2 to use new API.
	This saves a lot of syscalls (ioctl, socket).
	Point-to-Point info are queried only if needed.
	Default device type is ethernet because on !linux, devices
	names usually reflect vendor/driver names (e.g. rl0 for realtek).

2006-08-06  Benoît Dejean  <benoit@placenet.org>

	* src/backend.c: (get_available_devices): Improved.
	Added TODO.

2006-08-06  Benoît Dejean  <benoit@placenet.org>

	* src/backend.c: (is_no_dummy_device): Reworked.

2006-07-22  Benoît Dejean  <benoit@placenet.org>

	* src/backend.h:
	* src/backend.c: (get_additional_info), (get_device_info):
	* src/netspeed.c: (search_for_up_if), (update_applet),
	(device_change_cb), (netspeed_applet_factory): Avoided returning
	DevInfo as value, use pointer instead. This saves some copies,
	which saves a bit of CPU time on x86.
	Also fixed a leak in search_for_up_if.

	* src/backend.c: (format_ipv4), (format_ipv6): Saved 2 g_strdup.

2006-07-18  Jörgen Scheibengruber <mfcn@gmx.de>

	* configure.in:	0.13 -> 0.13.99
	* netspeed.c: (bytes_to_string): use gettext(), so that N_-strings get
	translated properly

2006-07-11  Jörgen Scheibengruber <mfcn@gmx.de>
