@@ -1,6 +1,6 @@
 AC_PREREQ(2.52)
 
-AC_INIT(netspeed_applet, 0.13.99, http://www.wh-hms.uni-ulm.de/~mfcn/netspeed)
+AC_INIT(netspeed_applet, 0.14, http://www.wh-hms.uni-ulm.de/~mfcn/netspeed)
 AC_CONFIG_SRCDIR(src/netspeed.c)
 AM_INIT_AUTOMAKE(AC_PACKAGE_NAME, AC_PACKAGE_VERSION)
 
