@@ -1,3 +1,9 @@
+2006-09-24  Jörgen Scheibengruber <mfcn@gmx.de>
+
+	* src/netspeed.c: (netspeed_applet_factory):
+	fixed tiny leak on initialization
+	* configure.in: prepare new release => 0.14
+
 2006-08-09  Benoît Dejean  <benoit@placenet.org>
 
 	* src/netspeed.c: (netspeed_applet_factory):
